# myopenenv

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SPACES_README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
baseline/: run_baseline.py
env/: __init__.py  environment.py  models.py
graders/: task_graders.py
server/: app.py
tasks/: task_definitions.py
tests/: test_environment.py  validate_logic.py
